# interactive-invigoration

./: .gitignore  CMakeLists.txt  README.md  interactive-invigoration
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
include/: Camera.h  PlantGraph.h  Shader.h  Spline.h  Strand.h
include/core/: Camera.h  Strand.h  Tree.h
include/geometry/: Mesh.h  Spline.h  util.h
include/simulation/: PBD.h  PBDConstraint.h
shaders/: basic.frag  basic.vert  phong.frag
src/: PBD.cpp  PBD.h  PBDConstraint.h  PlantGraph.h  Tree.cpp  Tree.h  main.cpp
src/core/: Strand.cpp  Tree.cpp
src/geometry/: Mesh.cpp  Spline.cpp  util.cpp
src/simulation/: PBD.cpp
